Changed the installer info format.

--- a/Ansible/collection/jfrog/ansible/roles/artifactory/templates/installer-info.json.j2
+++ b/Ansible/collection/jfrog/ansible/roles/artifactory/templates/installer-info.json.j2
@@ -1,8 +1,12 @@
 {
-  "productId": "Ansible_{{ ansible_marketplace }}_artifactory-pro-{{artifactory_version}}/1.0.0",
+  "productId": "Ansible_artifactory/1.0.0",
   "features": [
-  {
-    "featureId": "Partner/ACC-006973"
-  }
+    {
+      "featureId": "Partner/ACC-006973"
+    },
+    {
+      "featureId": "Channel/{{ ansible_marketplace }}"
+    }
   ]
 }
+
