Add fixes to database file for derby.

--- a/Ansible/ansible_collections/jfrog/installers/roles/artifactory/templates/system.yaml.j2
+++ b/Ansible/ansible_collections/jfrog/installers/roles/artifactory/templates/system.yaml.j2
@@ -32,7 +32,13 @@ shared:
 
     ## Example for mysql/postgresql
     type: "{{ db_type }}"
-    driver: "{{ db_driver }}"
-    url: "{{ db_url }}"
-    username: "{{ db_user }}"
+{%+ if db_type == 'derby' -%}
+#    driver: "{{ db_driver }}"
+#    url: "{{ db_url }}"
+#    username: "{{ db_user }}"
+{%+ else -%}
+     driver: "{{ db_driver }}"
+     url: "{{ db_url }}"
+     username: "{{ db_user }}"
+{%+ endif -%}
     password: "{{ db_password }}"
