Swap missionControl_version variable for missioncontrol_version

--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/installer-info.json.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/installer-info.json.j2
@@ -1,6 +1,6 @@
 {{ ansible_managed | comment }}
 {
-  "productId": "Ansible_MissionControl/{{ platform_collection_version }}-{{ missionControl_version }}",
+  "productId": "Ansible_missioncontrol/{{ platform_collection_version }}-{{ missioncontrol_version }}",
   "features": [
     {
       "featureId": "Channel/{{ ansible_marketplace }}"
