[jfrog-platform] 7.21.7 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/elasticsearch.yml.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/elasticsearch.yml.j2
@@ -9,6 +9,7 @@ bootstrap.memory_lock: false
 path.data: {{ mc_es_data_dir }}
 path.logs: {{ mc_es_log_dir }}
 
+xpack.security.enabled: false
 searchguard.ssl.transport.pemcert_filepath: localhost.pem
 searchguard.ssl.transport.pemkey_filepath: localhost.key
 searchguard.ssl.transport.pemtrustedcas_filepath: root-ca.pem
