--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/slave.elasticsearch.yml.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/slave.elasticsearch.yml.j2
@@ -1,6 +1,7 @@
 #bootstrap.memory_lock: true
 discovery.seed_providers: file
 
+xpack.security.enabled: false
 path.data: {{ mc_es_home }}/data
 path.logs: {{ mc_es_home }}/logs
 
