--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/slave.system.yaml.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/slave.system.yaml.j2
@@ -15,6 +15,7 @@ shared:
     password: {{ mc_es_password }}
     url: {{ mc_es_url }}
     username: {{ mc_es_user }}
+    external: true
   security:
     joinKey: {{ join_key }}
 router:
