--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/master.elasticsearch.yml.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/templates/ha/master.elasticsearch.yml.j2
@@ -1,9 +1,10 @@
 discovery.seed_providers: file
 
-{% if mc_elasticsearch_package | regex_search(".*oss-7.*") %}
+{% if mc_elasticsearch_package | regex_search(".*-7.*") %}
 cluster.initial_master_nodes: {{ ansible_host }}
 {% endif %}
 
+xpack.security.enabled: false
 path.data: {{ mc_es_home }}/data
 path.logs: {{ mc_es_home }}/logs
 
