Issue #136 - added boolean variable to decide whether to add a redirect directive to the nginx config when the docker subdomain feature is used.

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
@@ -26,6 +26,7 @@
   error_log /var/log/nginx/artifactory-error.log;
   rewrite ^/$ /ui/ redirect;
   rewrite ^/ui$ /ui/ redirect;
+  {% if artifactory_docker_registry_subdomain %}rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/$1/$2;{% endif %}
   chunked_transfer_encoding on;
   client_max_body_size 0;
   location / {
