--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
@@ -10,8 +10,8 @@
   server 127.0.0.1:8081;
 }
   ssl_protocols TLSv1.1 TLSv1.2;
-  ssl_certificate      /var/opt/jfrog/nginx/ssl/cert.pem;
-  ssl_certificate_key  /etc/pki/tls/cert.key;
+  ssl_certificate      {{ ssl_certificate_path }}/cert.pem;
+  ssl_certificate_key  {{ ssl_certificate_key_path }}/cert.key;
   ssl_session_cache shared:SSL:1m;
   ssl_prefer_server_ciphers   on;
   ## server configuration
