--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/templates/artifactory.conf.j2
@@ -9,7 +9,8 @@
   upstream artifactory-direct {
   server 127.0.0.1:8081;
 }
-  ssl_protocols TLSv1.1 TLSv1.2;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
   ssl_certificate      {{ ssl_certificate_path }}/{{ ssl_certificate }};
   ssl_certificate_key  {{ ssl_certificate_key_path }}/{{ ssl_certificate_key }};
   ssl_session_cache shared:SSL:1m;
