Cluster file system only when artifactory_ha_enabled

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/templates/binarystore.xml.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/templates/binarystore.xml.j2
@@ -1,1 +1,11 @@
-{{ artifactory_binarystore }}
+{%- if artifactory_ha_enabled -%}
+<?xml version="1.0" encoding="UTF-8"?>
+<config version="2">
+  <chain template="cluster-file-system"/>
+</config>
+{%- else -%}
+<?xml version="1.0" encoding="UTF-8"?>
+<config version="1">
+  <chain template="file-system"/>
+</config>
+{%- endif -%}
