Rewok of the artifactory_nginx role. More modular and nginx repos setup is now optional.

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/redirect_http_to_https.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/redirect_http_to_https.conf.j2
@@ -1,3 +1,4 @@
+{% raw %}
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -6,3 +7,4 @@ server {
         return 301 https://$host$request_uri;
     }
 }
+{% endraw %}
