--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/templates/postgres.sh.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/templates/postgres.sh.j2
@@ -1,4 +1,4 @@
 {{ ansible_managed | comment }}
 export PGDATA={{ postgresql_data_dir }}
-export LC_ALL={{ postgres_locale }}
 export PATH=$PATH:{{ postgresql_bin_path }}
+export LC_ALL={{ postgresql_locale }}
