--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/nginx.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/nginx.conf.j2
@@ -1,5 +1,5 @@
 #user  nobody;
-worker_processes  {{ nginx_worker_processes }};
+worker_processes  {{ artifactory_nginx_worker_processes }};
 error_log  /var/log/nginx/error.log  info;
 #pid        logs/nginx.pid;
 
