--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/certificate.key.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/certificate.key.j2
@@ -1,4 +1,4 @@
-{% set cert = certificate_key.split('|') %}
+{% set cert = ssl_certificate_key.split('|') %}
 {% for line in cert %}
 {{ line }}
 {% endfor %}
