[ansible] JFrog Platform 11.1.0 release (#448)
* Refactored Nginx role (DRY).

* nginx_upstream: true does the same as the roles did before

* Fix typo

* 'latest' Nginx module is 1.24.

* mainline

* Update Debian-ownstream.yml

* Amend server name to create a repo variable in Nginx config. (#359)

* [ansible] JFrog Platform 11.1.0 release

---------

Co-authored-by: Bas Meijer <bas.meijer@me.com>
Co-authored-by: Bas Meijer <bas.meijer@enexis.nl>
Co-authored-by: Vijay Kumar P <vijaykp@jfrog.com>

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/certificate.pem.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/certificate.pem.j2
@@ -1,4 +1,4 @@
-{% set cert = certificate_key.split('|') %}
+{% set cert = ssl_certificate.split('|') %}
 {% for line in cert %}
 {{ line }}
 {% endfor %}
