--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/artifactory.conf.j2
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/templates/artifactory.conf.j2
@@ -10,6 +10,7 @@
   server 127.0.0.1:8081;
 }
 {% if artifactory_nginx_ssl_enabled is defined and artifactory_nginx_ssl_enabled %}
+## add ssl entries when https has been set in config
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
   ssl_certificate      {{ ssl_certificate_path }}/{{ ssl_certificate_name }};
@@ -32,8 +33,8 @@
   if ($http_x_forwarded_proto = '') {
   set $http_x_forwarded_proto  $scheme;
   }
-  ##Set up mTLS Verification and Certificate Termination on the Reverse Proxy
   {% if mtls_ca_certificate_install %}
+    ## Set up mTLS Verification and Certificate Termination on the Reverse Proxy
   ssl_verify_client      on;
   ssl_verify_depth       2;
   ssl_client_certificate {{ mtls_ca_certificate_path }}/{{ mtls_mtls_ca_certificate_crt_name }};
@@ -44,7 +45,9 @@
   error_log /var/log/nginx/artifactory-error.log;
   rewrite ^/$ /ui/ redirect;
   rewrite ^/ui$ /ui/ redirect;
-  {% if artifactory_docker_registry_subdomain %}rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/$1/$2;{% endif %}
+{% if artifactory_docker_registry_subdomain %}
+    rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/$1/$2;
+{% endif %}
   chunked_transfer_encoding on;
   client_max_body_size 0;
   location / {
